<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animal"
    tools:context="com.wadud.anwar.krisokerbondu.PraniSompodFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/prani_linearLayout"
        android:layout_width="match_parent"
        android:paddingTop="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

            <Button
                android:layout_width="260dp"
                android:id="@+id/btn_pgoru"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/pgoru"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_psagol"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:text="@string/psagol"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>


            <Button
                android:layout_width="260dp"
                android:id="@+id/btn_phas"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/phas"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_pmurgi"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:text="@string/pmurgi"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
            <Button
                android:layout_width="260dp"
                android:id="@+id/btn_pkobutor"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/pkobutor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
            <Button
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_pmohis"
                android:layout_weight=".5"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:text="@string/pmohis"/>


    </LinearLayout>
</ScrollView>
</FrameLayout>
